--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Новый проект
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>Project_1</title>
+    </head>
+    <body>
+        <h1>Project_1</h1>
+    </body>
+</html>
